[package]
name = "projecteuler-rs"
version = "0.1.0"
authors = ["Sam Cappleman-Lynes <sam.capplemanlynes@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.9.0"
interleave = "1.0.1"
itertools = "0.7.8"
num = "0.1.40"
permutohedron = "0.2.2"
petgraph = "0.4.13"
rand = "0.4"
rustc-serialize = "0.3"

combinatorics = { path = "./libs/combinatorics" }
continued_fractions = { path = "./libs/continued_fractions" }
mertens_recurrence = { path = "./libs/mertens_recurrence" }
modular_arithmetic = { path = "./libs/modular_arithmetic" }
number_theory = { path = "./libs/number_theory" }
primesieve = { path = "./libs/primesieve" }
search = { path = "./libs/search" }