[package]
name = "projecteuler-rs"
version = "0.1.0"
authors = ["Sam Cappleman-Lynes <sam.capplemanlynes@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12"
interleave = "1.0"
itertools = "0.8"
num = "0.2"
permutohedron = "0.2"
petgraph = "0.4"
rand = "0.7"

combinatorics = { path = "./libs/combinatorics" }
continued_fractions = { path = "./libs/continued_fractions" }
mertens_recurrence = { path = "./libs/mertens_recurrence" }
modular_arithmetic = { path = "./libs/modular_arithmetic" }
number_theory = { path = "./libs/number_theory" }
primesieve = { path = "./libs/primesieve" }
search = { path = "./libs/search" }